# GenAI-RAG-FastAPI

./: .env.template  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  setup.cfg
src/: main.py
src/controllers/: authentication_services.py  misc_services.py  movies_services.py
src/core/: config.py  enums.py
src/database/: connect.py
src/middleware/: csrf.py  islogin.py  limiters.py  logging.py
src/schemas/: models.py  requests.py  responses.py
src/views/: auth.py  movies.py
tests/test_routes/: test_authentication.py  test_movies.py
