[tool.poetry]
name = "genai-rag-semantic-movies"
version = "0.0.0"
description = "Semantic Search over Movies DB (GenAI) (RAG)"
authors = ["Supreeth Kunder <kundersupreeth@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = {extras = ["srv"], version = "^4.6.3"}
pydantic-settings = "^2.2.1"
pydantic = {extras = ["all"], version = "^2.6.4"}
fastapi = {extras = ["all"], version = "^0.110.1"}
redis = "^5.0.3"
pytest = {extras = ["all"], version = "^8.1.1"}
pre-commit = "^3.7.0"
uvicorn = "^0.29.0"
gunicorn = "^21.2.0"
ruff = "^0.3.5"
bandit = "^1.7.8"
tox = "^4.14.2"
coloredlogs = "^15.0.1"
wemake-python-styleguide = "^0.19.2"
black = "^24.3.0"
flake8 = {extras = ["all"], version = "^7.0.0"}
mypy = "^1.9.0"
isort = "^5.13.2"
pendulum = "^3.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]
